--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ small {
 .coming-soon {
   background: url(/images/bg-pattern-desktop.svg) no-repeat center center/cover;
   width: 55%;
+  height: auto;
 }
 
 .logo {
