--- a/style.css
+++ b/style.css
@@ -33,13 +33,18 @@ ul {
 }
 
 small {
-  /* display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-right: 5rem; */
   display: block;
-  padding-right: 35%;
+  padding-right: 38%;
   padding-top: 0.5rem;
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  color: #f5666c;
+  visibility: hidden;
+}
+
+form.error small {
+  visibility: visible;
 }
 
 .card-container {
@@ -116,7 +121,7 @@ form input[type="text"] {
   border: 1px solid #ece6e6;
 }
 
-form input[type="text"] .error {
+form input[type="text"] {
   border-radius: 30px;
   padding: 12px 0px 12px 12px;
   width: 58%;
@@ -132,14 +137,24 @@ input:focus {
   outline: none;
 }
 
+.email-error img {
+  position: absolute;
+  left: 62%;
+  top: 6%;
+}
+
+#error-img {
+  visibility: hidden;
+}
+
 button {
   width: 12%;
   height: 48px;
   border-radius: 30px;
   border: none;
   position: absolute;
-  bottom: 79%;
-  left: 67%;
+  bottom: 75%;
+  left: 69%;
   z-index: 1;
   transition: 0.2s ease-in-out;
   background: #ffe6e5; /* Old browsers */
@@ -267,11 +282,16 @@ Media Queries
     border: 1px solid #ece6e6;
   }
 
+  small {
+    top: 25%;
+    left: 18%;
+  }
+
   button {
     width: 19%;
     height: 48px;
     position: absolute;
-    bottom: 78%;
+    bottom: 75%;
     left: 72%;
   }
 }
@@ -367,11 +387,15 @@ Tablet and landscape mobile
     border: 1px solid #ece6e6;
   }
 
+  small {
+    left: 27%;
+  }
+
   button {
     width: 10%;
     height: 48px;
     position: absolute;
-    bottom: 78%;
+    bottom: 75%;
     left: 68%;
   }
 }
